# anyframe-rs

./: .clippy.toml  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  anyframe.plugin.zsh
.cargo/: config.toml
.github/workflows/: autofix.yml  ci.yml  release.yml  security.yml
docs/: architecture.md  customization.md  installation.md  usage.md
src/: lib.rs  main.rs
src/actions/: mod.rs
src/selectors/: mod.rs
src/sources/: mod.rs
src/widgets/: mod.rs
